[gd_scene format=3 uid="uid://cdqt3bebxpqxk"]

[ext_resource type="Script" uid="uid://wqpmnb3prp5t" path="res://scenes/menus/options_menu/game/game_options_menu.gd" id="1_hvcyg"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/nodes/utilities/capture_focus.gd" id="2_t8t6j"]
[ext_resource type="PackedScene" uid="uid://bjr38vv2fmnfl" path="res://scenes/menus/options_menu/game/reset_game_control/reset_game_control.tscn" id="3_pfgxr"]

[node name="Game" type="MarginContainer" unique_id=1661549495]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24
script = ExtResource("1_hvcyg")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=738680638]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("2_t8t6j")
search_depth = 2

[node name="ResetGameControl" parent="VBoxContainer" unique_id=380075661 instance=ExtResource("3_pfgxr")]
layout_mode = 2

[node name="TimerControls" type="HBoxContainer" parent="VBoxContainer" unique_id=1775794217]
layout_mode = 2

[node name="TimerText" type="Label" parent="VBoxContainer/TimerControls" unique_id=1648807780]
layout_mode = 2
size_flags_horizontal = 3
text = "Timer Difficulty "

[node name="TimerOptions" type="OptionButton" parent="VBoxContainer/TimerControls" unique_id=2107301368]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Casual"
popup/item_1/id = 1
popup/item_2/text = "Off"
popup/item_2/id = 2

[connection signal="reset_confirmed" from="VBoxContainer/ResetGameControl" to="." method="_on_ResetGameControl_reset_confirmed"]
[connection signal="item_selected" from="VBoxContainer/TimerControls/TimerOptions" to="." method="_on_timer_options_item_selected"]
